Fix display of labels on mobile icons

--- a/src/components/layout/navigation/MobileBottomNavbar.less
+++ b/src/components/layout/navigation/MobileBottomNavbar.less
@@ -21,6 +21,7 @@ section.mobile-bottom-navbar {
 
       .icon-label {
         margin-top: 6px;
+        display: block;
       }
     }
   }
